<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/about"
        android:id="@+id/menu1"
        app:showAsAction="never"
        android:orderInCategory="1"/>
    <item android:title="@string/register"
        android:id="@+id/menu2"
        app:showAsAction="never"
        android:orderInCategory="2"/>
    <item android:title="@string/bitflip"
        android:id="@+id/menu4"
        app:showAsAction="never"
        android:orderInCategory="3"/>
    <item android:title="@string/rate_app"
        android:id="@+id/menu3"
        app:showAsAction="never"
        android:orderInCategory="5"/>
    <item android:title="@string/exmo"
        android:id="@+id/menu5"
        app:showAsAction="never"
        android:orderInCategory="4"/>

</menu>